Fixed: Links at footer, css at footer, header and langselector collapses when navigation or lang selection action is performed.

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-footer {
+footer.Footer {
     background-color: var(--color-1);
 
     z-index: 9;
