--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,6 +20,7 @@ header {
         display: flex;
         align-items: center;
         color: var(--gray-1);
+        z-index: 20;
         
         font-size: 1.7rem;
         & img{
